--- a/labweb/templates/labweb/project/ai_projects_list.html
+++ b/labweb/templates/labweb/project/ai_projects_list.html
@@ -44,7 +44,7 @@
   <header class="text-center">
     <br><br><br><br><br><br>
     <h1 class="display-4 font-weight-bold">AI Projects</h1>
-    <p class="font-italic text-muted mb-0">Let me introduce the research topic of our lab. We study Network AI that can be used in real life.</p>
+    <p class="font-italic text-muted mb-0">Let me introduce projects of AI Team</p>
     <br><br><br>
   </header>
 
@@ -55,7 +55,7 @@
         {% if project.first_photo %}
           <img src="{{ project.first_photo.photo.url }}" class="img-thumbnail card-img-top" alt="Project image">
         {% else %}
-          <div class="card-img-top" style="background-color: #f8f9fa;"></div> <!-- 빈 이미지를 위한 공간 -->
+          <div class="card-img-top"></div> <!-- 빈 이미지를 위한 공간 -->
         {% endif %}
       </div>
       <div class="col-md-8">
@@ -77,6 +77,7 @@
               {% endfor %}
             </div>
           </div>
+          <br>
           <p class="card-text"><small class="text-muted">{{ project.start_date|date:"Y-m-d" }}</small></p>
           
         </div>
