--- a/labweb/templates/labweb/homev2.html
+++ b/labweb/templates/labweb/homev2.html
@@ -1,117 +1,58 @@
-<!-- NEW version -->
-<!--Version 23.5.31-->
-<!-- 23.6.15 --><!-- 23.6.18 --><!-- 23.6.29 -->
-<!-- 24.04.12 -->
-<!-- 현재 사용중 -->
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    {%load static %}
-  
-      <link rel="stylesheet" href="/static/css/navi.css">
-      <link rel="stylesheet" href="/static/css/home2.css">
-  
-      <!--font-->
-
-      <!-- bootstrap -->
-      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-      <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
-  
-      <script src="/static/js/particles.js/src/particles.js"></script>
-      <script src="/static/js/home.js"></script>
-  
-  </head>
-  <body>
-          <section class="title" >
-            <div class="container px-lg-5 " style="display: flex; flex-direction: column; ">
-              <div class="row row-cols-1">
-                  <div class="col" style="width: auto; display: inline-block;">
-                      <div class="row" style="display: flex; justify-content: center; ">
-                          <!-- <div class="col-1 py-1 px-lg-2" style="display: flex;justify-content: flex-end;"> -->
-                            <h1>INES</h1>
-                          <!-- </div> -->
-                         
-            
-                          <!-- <div class="col-1 d-flex justify-content-center " style="width:100%"> -->
-                            <div class="row row-cols-1 " style="width: min-content; padding-left: 10px;">
-                                <div class="col " style="display: flex; align-items: flex-end;">
-                                    <nav class="menu" style="display: inline-block; display: flex; flex-direction: column; justify-content: center;" >
-                                        <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open-1"/>
-                                        <label class="menu-open-button" for="menu-open-1">
-                                            AI/HW
-                                        </label>
-            
-                                        <a href="/member/#" class="menu-item"> <i class="fa fa-solid fa-user" ></i></a>
-                                        <a href="/projects/#" class="menu-item"> Proj </a>
-                                        <a href="/publication/#" class="menu-item"> Pub</a>
-                                        <a href="/awards/#" class="menu-item"><i class="fa fa-solid fa-trophy"></i></a>
-                                        <!--  contact 부분은 추후에 기능 완성되면 추가 예정 -->
-                                        <!-- <a href="#" class="menu-item"><i class="fa fa-solid fa-envelope"></i></a>     -->
-                                    </nav>   
-                                </div>
-                                <!-- <div class="col" style="display: flex; align-items: flex-start;">
-                                    <nav class="menu" style="display: inline-block;">
-                                        <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open-2"/>
-                                        <label class="menu-open-button" for="menu-open-2">
-                                            HW
-                                        </label>
-          
-                                        <a href="#" class="menu-item"> <i class="fa fa-solid fa-user" ></i></a>
-                                        <a href="#" class="menu-item"> Proj </a>
-                                        <a href="#" class="menu-item"> Pub</a>
-                                        <a href="#" class="menu-item"><i class="fa fa-solid fa-trophy"></i></a>
-                                        <a href="#" class="menu-item"><i class="fa fa-solid fa-envelope"></i></a>       
-                                    </nav>
-                                </div> -->
-                              </div>
-                          <!-- </div> -->
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/home2.css' %}">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+    <script src="{% static 'js/particles.js/src/particles.js' %}"></script>
+    <script src="{% static 'js/home.js' %}"></script>
+</head>
+<body>
+    <section class="title">
+        <div class="container px-lg-5" style="display: flex; flex-direction: column;">
+            <div class="row row-cols-1">
+                <div class="col" style="width: auto; display: inline-block;">
+                    <div class="row" style="display: flex; justify-content: center;">
+                        <h1 class="big-caslon">INES</h1>
+                        <div class="description big-caslon">
+                            <p>Intelligent</p>
+                            <p>Nano-Bio</p>
+                            <p>Electronic</p>
+                            <p>System</p>
                         </div>
-  
-                  </div>
-                  <div class="col">
-                      <h3 class="span loader">
-                          <span class="m">Click </span><br>
-                          <span class="m">'AI/HW'</span><br>
-                          <span class="m">for more info. </span><br>
-                      
-                          <span class="m m2"></span><br>
-                          <span class="m m2">Intelligent</span><br>
-                          <span class="m m2">Nano-Bio</span><br>
-                          <span class="m m2">Electronic</span><br>
-                          <span class="m m2">System</span>
-                      </h3>  
-                     
-                  </div>
-      
+                    </div>
                 </div>
-              
+                <div class="col">
+                    <h3 class="span loader">
+                        <span class="m m2">Click </span><br>
+                        <span class="m m2 ">'AI' or 'HW'</span><br>
+                        <span class="m m2">for more info. </span><br>
+                        <span class="m m2"></span><br>
+                    <h3>
+                    <h3 class="span">
+                        <div id="container">
+                            <button class="learn-more" onclick="location.href='/ai/members/filter/'">
+                                <span class="circle" aria-hidden="true">
+                                    <span class="icon arrow"></span>
+                                </span>
+                                <span class="button-text">AI Team</span>
+                            </button>
+                            <button class="learn-more" onclick="location.href='/hw/members/filter/'">
+                                <span class="circle" aria-hidden="true">
+                                    <span class="icon arrow"></span>
+                                </span>
+                                <span class="button-text">HW Team</span>
+                            </button>
+                        </div>
+                    </h3>
+                </div>
             </div>
-        </section>
-       
-          <!-- filters -->
-          <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-              <defs>
-              <filter id="shadowed-goo">
-                  
-                  <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
-                  <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-                  <feGaussianBlur in="goo" stdDeviation="3" result="shadow" />
-                  <feColorMatrix in="shadow" mode="matrix" values="0 0 0 0 0  0 0 0 0 0  0 0 0 0 0  0 0 0 1 -0.2" result="shadow" />
-                  <feOffset in="shadow" dx="1" dy="1" result="shadow" />
-                  <feComposite in2="shadow" in="goo" result="goo" />
-                  <feComposite in2="goo" in="SourceGraphic" result="mix" />
-              </filter>
-              <filter id="goo">
-                  <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
-                  <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-                  <feComposite in2="goo" in="SourceGraphic" result="mix" />
-              </filter>
-              </defs>
-          </svg>
-        
-      
-        <canvas class="background"></canvas>
-  
-  </body>  
+        </div>
+    </section>
+    <canvas class="background"></canvas>
+</body>
+</html>
