#15-feat: Ai, HW 엔드포인트로 분리하여 publications 앱에 연결 + templates 정리, journal과 conferences를 따로 두지 않고 DB를 함께 관리할 수 있도록 하고 html에서도 조건문으로 구분하여 보일 수 있도록 설정

--- a/labweb/templates/labweb/base.html
+++ b/labweb/templates/labweb/base.html
@@ -97,8 +97,8 @@
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Publication</a>
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="/ai/publication/journal">Journal</a>
-                                            <a class="dropdown-item" href="/ai/publication/conference">Conference</a>
+                                            <a class="dropdown-item" href="/ai/publications/JOUR/">Journal</a>
+                                            <a class="dropdown-item" href="/ai/publications/CONF/">Conference</a>
                                         </div>
                                     </li>
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
@@ -128,8 +128,8 @@
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Publication</a>
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="/hw/publication/journal">Journal</a>
-                                            <a class="dropdown-item" href="/hw/publication/conference">Conference</a>
+                                            <a class="dropdown-item" href="/hw/publications/JOUR/">Journal</a>
+                                            <a class="dropdown-item" href="/hw/publications/CONF/">Conference</a>
                                         </div>
                                     </li>
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
