--- a/labweb/templates/labweb/gallery/hw_gallery.html
+++ b/labweb/templates/labweb/gallery/hw_gallery.html
@@ -10,7 +10,7 @@
     <header class="text-center">
     <br><br><br><br><br><br>
     <h1 class="display-4 font-weight-bold">Gallery</h1>
-    <p class="font-italic text-muted mb-0">HW team</p>
+    <p class="font-italic text-muted mb-0">Check out highlights and moments from our lab's</p>
     <br><br><br>
   </header>
    
