--- a/labweb/templates/labweb/member/ai_member.html
+++ b/labweb/templates/labweb/member/ai_member.html
@@ -18,7 +18,7 @@
     <header class="text-center">
       <br><br><br> <br><br><br>
       <h1 class="display-4 font-weight-bold">People</h1>
-      <p class="font-italic text-muted mb-0">Let me introduce the member of our lab, AI Team. </p>
+      <p class="font-italic text-muted mb-0">Let me introduce AI Team members of our lab</p>
       <br><br><br>
       <h3 class="display-7 font-weight-bold">Member</h3>
     
