--- a/labweb/templates/labweb/notice/hw_notice.html
+++ b/labweb/templates/labweb/notice/hw_notice.html
@@ -21,7 +21,7 @@
     <header class="text-center">
     <br><br><br><br><br><br>
     <h1 class="display-4 font-weight-bold">Hardware Notices</h1>
-    <p class="font-italic text-muted mb-0">We have new news!</p>
+    <p class="font-italic text-muted mb-0">Stay updated with the latest news and announcements from our lab</p>
     <br><br><br>
   </header>
   <div class="row mt-5">
