--- a/labweb/templates/labweb/project/ai_projects_list.html
+++ b/labweb/templates/labweb/project/ai_projects_list.html
@@ -44,7 +44,7 @@
   <header class="text-center">
     <br><br><br><br><br><br>
     <h1 class="display-4 font-weight-bold">AI Projects</h1>
-    <p class="font-italic text-muted mb-0">Let me introduce projects of AI Team</p>
+    <p class="font-italic text-muted mb-0">Our lab undertakes innovative projects that push the boundaries of technology and science.</p>
     <br><br><br>
   </header>
 
