--- a/labweb/templates/labweb/award/hw_awards.html
+++ b/labweb/templates/labweb/award/hw_awards.html
@@ -25,7 +25,7 @@
       <header class="text-center">
       <br><br><br><br><br><br>
       <h1 class="display-4 font-weight-bold">Award-Winning</h1>
-      <p class="font-italic text-muted mb-0">Our lab has been awarded in various competitons. </p>
+      <p class="font-italic text-muted mb-0">See the awards and recognitions our lab has received</p>
       <br><br><br>
     </header>
     
