--- a/labweb/templates/labweb/publication/hw_publications.html
+++ b/labweb/templates/labweb/publication/hw_publications.html
@@ -25,7 +25,11 @@
     <header class="text-center">
       <br><br><br><br><br><br>
       <h1 class="display-4 font-weight-bold">{% if pub_type == 'CONF' %}Conference{% else %}Journal{% endif %}</h1>
-      <p class="font-italic text-muted mb-0">Let me introduce the research topic of our lab. We study Network AI that can be used in real life.</p>
+      <p class="font-italic text-muted mb-0">
+        {% if pub_type == 'CONF' %}We present our latest research findings at various conferences.
+        {% else %} Our research is published in peer-reviewed journals.
+        {% endif %}
+      </p>
       <br><br><br>
     </header>
     
