#15-feat: Ai, HW 엔드포인트로 분리하여 advisor 앱에 연결 + templates 정리

--- a/labweb/templates/labweb/base.html
+++ b/labweb/templates/labweb/base.html
@@ -82,8 +82,8 @@
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="/ai/members/">People</a>
-                                            <a class="dropdown-item" href="/ai/history/">History</a>
+                                            <a class="dropdown-item" href="/ai/advisors/">Advisor</a>
+                                            <a class="dropdown-item" href="/ai/members/filter/">People</a>
                                             <hr class="dropdown-divider">
                                             <a class="dropdown-item" href="https://kojungbeom.github.io/">iNES AI team Blog</a>
                                         </div>
@@ -113,10 +113,8 @@
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="/hw/members/">People</a>
-                                            <a class="dropdown-item" href="/hw/history/">History</a>
-                                            <hr class="dropdown-divider">
-                                            <a class="dropdown-item" href="https://kojungbeom.github.io/">iNES HW team Blog</a>
+                                            <a class="dropdown-item" href="/hw/advisors/">Advisor</a>
+                                            <a class="dropdown-item" href="/hw/members/filter/">People</a>
                                         </div>
                                     </li>
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
@@ -145,8 +143,8 @@
                                     <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="/members/">People</a>
-                                            <a class="dropdown-item" href="/history/">History</a>
+                                            <a class="dropdown-item" href="/hw/advisors/">Advisor</a>
+                                            <a class="dropdown-item" href="/hw/members/filter/">People</a>
                                             <hr class="dropdown-divider">
                                             <a class="dropdown-item" href="https://kojungbeom.github.io/">iNES Blog</a>
                                         </div>
