--- a/labweb/templates/labweb/homev2.html
+++ b/labweb/templates/labweb/homev2.html
@@ -35,13 +35,13 @@
                     <h3>
                     <h3 class="span">
                         <div id="container">
-                            <button class="learn-more" onclick="location.href='/ai/members/filter/'">
+                            <button class="learn-more" onclick="location.href='/ai/advisors/'">
                                 <span class="circle" aria-hidden="true">
                                     <span class="icon arrow"></span>
                                 </span>
                                 <span class="button-text">AI Team</span>
                             </button>
-                            <button class="learn-more" onclick="location.href='/hw/members/filter/'">
+                            <button class="learn-more" onclick="location.href='/hw/advisors/'">
                                 <span class="circle" aria-hidden="true">
                                     <span class="icon arrow"></span>
                                 </span>
