#17-design: Main 화면에 대한 요구사항에 맞게 글씨체를 두껍게 수정하고, 설명 텍스트도 부제 느낌으로 CSS에 반영

--- a/labweb/templates/labweb/homev2.html
+++ b/labweb/templates/labweb/homev2.html
@@ -17,7 +17,7 @@
             <div class="row row-cols-1">
                 <div class="col" style="width: auto; display: inline-block;">
                     <div class="row" style="display: flex; justify-content: center;">
-                        <h1 class="big-caslon">INES</h1>
+                        <h1 class="big-caslon">iNES</h1>
                         <div class="description big-caslon">
                             <p>Intelligent</p>
                             <p>Nano-Bio</p>
@@ -27,27 +27,24 @@
                     </div>
                 </div>
                 <div class="col">
-                    <h3 class="span loader">
-                        <span class="m m2">Click </span><br>
-                        <span class="m m2 ">'AI' or 'HW'</span><br>
-                        <span class="m m2">for more info. </span><br>
-                        <span class="m m2"></span><br>
-                    <h3>
                     <h3 class="span">
                         <div id="container">
-                            <button class="learn-more" onclick="location.href='/ai/advisors/'">
-                                <span class="circle" aria-hidden="true">
-                                    <span class="icon arrow"></span>
-                                </span>
-                                <span class="button-text">AI Team</span>
-                            </button>
                             <button class="learn-more" onclick="location.href='/hw/advisors/'">
                                 <span class="circle" aria-hidden="true">
                                     <span class="icon arrow"></span>
                                 </span>
                                 <span class="button-text">HW Team</span>
                             </button>
+                            <button class="learn-more" onclick="location.href='/ai/advisors/'">
+                                <span class="circle" aria-hidden="true">
+                                    <span class="icon arrow"></span>
+                                </span>
+                                <span class="button-text">AI Team</span>
+                            </button>
                         </div>
+                        <h5 class="info-text">
+                            <span>Click 'HW TEAM' or 'AI TEAM' button for more info</span>
+                        </h5>
                     </h3>
                 </div>
             </div>
